--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <button type="submit" class="search">Search</button>
       </form>
       <ul class="gallery"></ul>
-      <div class="loader"></div>
+      <span class="loader">
     </main>
     <script type="module" src="./main.js"></script>
   </body>
